images load but not displaying properly

--- a/partials/movies_index.html
+++ b/partials/movies_index.html
@@ -1,4 +1,4 @@
-  <div ng-controller="main">
+  <div ng-controller="Main">
         <ul class="albums">
             <li ng-repeat="album in albums" class="album" ng-style="{ background : album.colors.background }">
                 <div class="container">
